Added Chrome options for grid