@@ -2,12 +2,15 @@ package testCases;
 
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URL;
 
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
+import org.openqa.selenium.firefox.FirefoxOptions;
+import org.openqa.selenium.remote.Browser;
 import org.openqa.selenium.remote.CapabilityType;
 import org.openqa.selenium.remote.DesiredCapabilities;
 import org.openqa.selenium.remote.RemoteWebDriver;
@@ -21,26 +24,36 @@ public class RemoteTest {
 
 	@Test
 	public void remoteTest() throws MalformedURLException{
-		ChromeOptions options = new ChromeOptions();
-		options.addArguments("--start-maximized");
-		options.setBrowserVersion("121");
+		
+		  ChromeOptions options = new ChromeOptions(); 
+		  options.addArguments("--start-maximized"); 
+		  options.setBrowserVersion("115"); 
+		
+		//  options.setCapability("platformName", "Windows 10");
+		 // options.setCapability("browserName", "chrome");
+		//  options.setCapability("version", "121");
 		 
+		
+		 
+		
+		
 		
 		/*
 		 * DesiredCapabilities caps = new DesiredCapabilities();
 		 * caps.setCapability(CapabilityType.BROWSER_NAME,"Firefox");
 		 */
-		// WebDriver driver = new ChromeDriver(options);
+		 WebDriver driver = new ChromeDriver(options);
 
-		// driver.get("https://www.google.com");
+		 driver.get("https://www.google.com");
+	}
 
-		WebDriver driver=null;
+		/*WebDriver driver=null;
 		
-			driver = new RemoteWebDriver(URI.create("http://192.168.40.1:4444").toURL(),options);
+			driver = new RemoteWebDriver(new URL("http://192.168.40.1:4444"),options);
 		
 			
 			driver.get("https://www.google.com");
-	}
+	}*/
 
 	/* WebDriver driver = null;
     try {
